# Bytesized

./: CMakeLists.txt
1_compilers/: CMakeLists.txt  example_2.cpp  example_3.cpp  example_4.cpp  kernels.cpp
2_cuda/: CMakeLists.txt  snellius_env.sh
2_cuda/example_1/: CMakeLists.txt  generate_inputs.py  kernels.cu  kernels.cuh  main.cpp
